src/test/deca/syntax/valid/lexer/cast-int-float.deca
// Description:
//    Programme minimaliste testant le cast simple.
//
// Resultats:
//    a = 1.0

{
    float a = (float) (1);
}
