src/test/deca/syntax/invalid/parser/cast-int-float.deca
// Description:
//    Programme invalide testant le cast simple.
//
// Resultats:
//    erreur syntax ligne 8

{
    float a = (float) 2;
}
